--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
 asgiref==3.8.1
-Django==5.0.6
-sqlparse==0.5.0
-tzdata==2024.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+contourpy==1.2.1
 crispy-bootstrap4==2022.1
 crispy-bootstrap5==0.7
+cycler==0.12.1
+Django==5.0.6
 django-ckeditor==6.5.1
 django-crispy-forms==2.0
 django-js-asset==2.0.0
 django-tinymce==3.6.1
+fonttools==4.53.0
 idna==3.4
+kiwisolver==1.4.5
+matplotlib==3.9.0
+numpy==2.0.0
+packaging==24.1
 Pillow==9.5.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 requests==2.31.0
+six==1.16.0
+sqlparse==0.5.0
 stripe==7.5.0
-typing-extensions==4.8.0
+typing_extensions==4.8.0
+tzdata==2024.1
 urllib3==2.1.0
